--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
   "prHourlyLimit": 10,
   "prConcurrentLimit": 10,
   "stabilityDays": 10,
+  "recreateWhen": "never",
   "labels": [
     "Dependency Management"
   ]
